<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/bsrc_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bsrc_welcome_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/handicap_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/handicap_result"
        app:layout_constraintVertical_bias="0.359" />

    <TextView
        android:id="@+id/average_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_text_field"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/handicap_calculate"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/handicap_result"
        app:layout_constraintVertical_bias="0.272" />

    <EditText
        android:id="@+id/average_input"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/average_hint_text"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/handicap_calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/average_text_field"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/score_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_text_field"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toEndOf="@+id/handicap_calculate"
        app:layout_constraintTop_toBottomOf="@+id/handicap_result"
        app:layout_constraintVertical_bias="0.272" />

    <EditText
        android:id="@+id/score_input"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/score_hint_text"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/handicap_calculate"
        app:layout_constraintTop_toBottomOf="@+id/score_text_field"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/handicap_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/handicap_result_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bsrc_welcome"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>